# nmpde-wave-equation

./: .clang-format  .gitignore  CMakeLists.txt  README.md  use-cluster.md
Analysis/: Dispersion_Dissipation.py  convergence_analysis.ipynb  dissipation_dispersion_analysis.py
analysis/: convergence-analysis.ipynb  convergence-newmark.csv  convergence-results.csv  convergence-theta-avg.csv  convergence-theta.csv  dissipation-dispersion-analysis.ipynb  other-analisys.ipynb  overtime.csv  scalability-analisys.ipynb  scalability-results-all.csv  scalability-results-cluster-2.csv  scalability-results-cluster-3.csv  scalability-results-cluster-4.csv  scalability-results-cluster.csv  scalability-results-ghi.csv  scalability-results-rob.csv
docs/: Doxyfile  custom-mathjax.js  custom.css  generate-docs.sh  md_filter.py
include/: ParameterReader.hpp  WaveEquationBase.hpp  WaveNewmark.hpp  WaveTheta.hpp
parameters/: dumping-wave.json  five-modes-wsol.json  fourier-pair-wsol.json  gaussian-pulse.json  oscillating-boundary.json  ricker-wavelet.json  sine-membrane-likedeal2.json  sine-membrane-newmark.json  sine-membrane.json  square-bump.json  square-pulsing.json  square-wave.json  standing-mode-wsol.json  standing-mode.json  stone-in-the-lake.json  traveling-square-bump.json  two-mode-superposition.json  two-modes-wsol.json
presentation/: presentation.tex
report/: bibliography.bib  report.tex
scripts/: collect_results.sh  compile.pbs  convergence-test.py  convergence_all.pbs  convergence_sweep.py  dissdisp-results.csv  dissdisp-runlog.csv  dissipation_dispersion_all.pbs  dissipation_dispersion_sweep.py  dissipation_dispersion_sweep_SMALL.py  run-scalability.pbs  scalability-test-cluster.py  scalability-test.py  scalability.pbs  scalability_all.pbs  scalability_array.pbs  scalability_single.py  scalability_sweep.py  scaling_1.pbs  scaling_16.pbs  scaling_2.pbs  scaling_4.pbs  scaling_8.pbs  scaling_all.pbs  submit_scaling_jobs.sh  submit_scaling_jobs_cpu.sh  submit_scaling_jobs_gpu.sh
src/: ParameterReader.cpp  ParameterReader.hpp  WaveEquationBase.cpp  WaveEquationBase.hpp  WaveNewmark-clock.cpp  WaveNewmark.cpp  WaveNewmark.hpp  WaveTheta.cpp  WaveTheta.hpp  (+6 more)
(+86 files in other folders)
